fix: fixed spacing issues, fixed tabs ul list

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -115,7 +115,8 @@ h5 {
   @apply text-heading-5;
 }
 
-p {
+article p {
+  @apply mb-4;
   line-height: 1.65em;
 }
 
@@ -190,7 +191,7 @@ article ul {
   }
 }
 
-article ul li::before {
+article ul li:not(#tabs-container li)::before {
   content: "•";
   font-weight: 500;
   position: absolute;
@@ -251,6 +252,10 @@ strong {
 }
 
 /* Supporting Content */
+
+article .expressive-code {
+  @apply mb-7;
+}
 
 code {
   --border-radius: 3px;
